Set WebPagePopupImpl's bounds even if they don't appear to have changed.

In r389984 I tried to make WebPagePopupImpl::resize only call into
setWindowRect (which sends an IPC to the browser process) if the bounds have
actually changed. This uncovered a bug in Aura that was papered up by the fact
that we repeatedly set the bounds. The proper way to fix this is in Aura itself
but we'd like to merge this for release so I'm landing this quick fix to
restore the previous behavior.

I'm working on a proper fix in crrev.com/2228093003

BUG=633140

Review-Url: https://codereview.chromium.org/2263503003
Cr-Commit-Position: refs/heads/master@{#413288}

Former-commit-id: 10dc8b7652e6d30337d9bea0ff8bba2592942751